force-app/main/default/objects/footprint__Analysis_log__c/footprint__Analysis_log__c.object-meta.xml
<CustomObject>
    <label>Analysis log</label>
    <nameField>
        <label>Analysis log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analysis logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>