force-app/main/default/objects/footprint__Analysis_log__c/fields/footprint__Code_segment__c.field-meta.xml
<CustomField>
    <fullName>footprint__Code_segment__c</fullName>
    <label>Code segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>