force-app/main/default/objects/footprint__Analysis_log__c/fields/footprint__Footprint__c.field-meta.xml
<CustomField>
    <fullName>footprint__Footprint__c</fullName>
    <label>Footprint</label>
    <referenceTo>footprint__FootPrint__c</referenceTo>
    <relationshipLabel>Analysis logs</relationshipLabel>
    <relationshipName>Analysis_logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>